fix gap between GSB menu icon and popup

--- a/src/components/GlobalStatusBar/GlobalStatusBar.scss
+++ b/src/components/GlobalStatusBar/GlobalStatusBar.scss
@@ -1,6 +1,6 @@
 .Global-status-bar {
-  rux-icon::part(icon) {
-    padding-bottom: 1.75rem;
+  #grm-popup-menu {
+    padding-bottom: 1.25rem;
   }
 
   &__status-indicators {
